--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -313,6 +313,15 @@
             <input type="checkbox" name="options[{D_PLAYER_OPTION_UNIVERSE_OLD}]" value="1" id="PLAYER_OPTION_UNIVERSE_OLD" <!-- IF PLAYER_OPTION_UNIVERSE_OLD -->checked="checked" <!-- ENDIF -->/>
           </td>
         </tr>
+        <tr>
+          <td class="c_c">
+            <label for="PLAYER_OPTION_UNIVERSE_DISABLE_COLONIZE">{L_PLAYER_OPTION_UNIVERSE_DISABLE_COLONIZE}</label>
+          </td>
+          <td class="c_c">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_UNIVERSE_DISABLE_COLONIZE}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_UNIVERSE_DISABLE_COLONIZE}]" value="1" id="PLAYER_OPTION_UNIVERSE_DISABLE_COLONIZE" <!-- IF PLAYER_OPTION_UNIVERSE_DISABLE_COLONIZE -->checked="checked" <!-- ENDIF -->/>
+          </td>
+        </tr>
         <!-- IF .options_2 -->
         <!-- BEGIN options_2 -->
         <tr>
