DESIGN-misc-40a16.11: Adjusted markup for OpenGame template

--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -16,7 +16,7 @@
 
   <tr id="chat_message_inputs">
     <th nowrap>
-      <table class="noborder" width="100%">
+      <table class="markup" width="100%">
         <tr>
           <td align="right" class="noborder" width="160px">
             <label for="msg">{L_chat_message}:</label>&nbsp;
