--- a/design/templates/OpenGame/imperator.tpl.html
+++ b/design/templates/OpenGame/imperator.tpl.html
@@ -52,7 +52,7 @@
   <tr class="c_r">
     <th class="c_l">{L_ov_raids}</th>
     <td colspan="1" align="center">
-      <table width=100%>
+      <table width=100% class="markup">
         <tr>
           <td class="c_l">{L_NumberOfRaids}</td><td class="c_r">{raids}</td>
         </tr>
