--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -46,7 +46,7 @@
 
 <br />
 
-<table align="center">
+<table align="center" class="markup">
   <tr>
     <th valign=top class="tr">
       <!-- IF NEW_MESSAGES || NEW_LEVEL_MINER || NEW_LEVEL_RAID -->
@@ -224,7 +224,7 @@
     </th>
 
     <th valign=top class="tr">
-      <table border="0" cellspacing=0 cellpadding=0 width="200">
+      <table border="0" cellspacing=0 cellpadding=0 width="200" class="markup">
         <!-- INCLUDE planet_list -->
       </table>
     </th>
