--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -19,7 +19,7 @@
   <!-- ENDIF -->
   <tr>
     <td class="c_l noborder">
-      <table cellspacing="0" cellpadding="0" class="header c_c" width="100%">
+      <table cellspacing="0" cellpadding="0" class="header c_c markup" width="100%">
         <tr>
           <th class="c_l noborder">
             <select size="1" onchange="changePlanet(this);">
@@ -38,8 +38,8 @@
   </tr>
 
   <tr>
-    <td class="c_l noborder">
-      <table cellspacing="0" cellpadding="0" class="header c_c noborder" width="100%">
+    <th class="c_l noborder">
+      <table cellspacing="0" cellpadding="0" class="header c_c noborder markup" width="100%">
         <tr>
           <th class="c_c" width="100%">
             <span class="ok">{L_time_local}: <span id="top_time">{TIME_TEXT_LOCAL}</span></span><br />
@@ -54,12 +54,12 @@
           </th>
         </tr>
       </table>
-    </td>
+    </th>
   </tr>
 
   <tr>
     <td class="c_l noborder">
-      <table width="100%" cellspacing="0" cellpadding="0"><tr>
+      <table width="100%" cellspacing="0" cellpadding="0" class="markup"><tr>
         <!-- BOF Nav Bar Left block -->
         <td class="c_l noborder" height="5.818181818182em">
         <!-- IF ! GAME_RESEARCH_DISABLED -->
