--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -23,6 +23,9 @@ You can look at actual JQ link for theme in /design/css/jquery-ui.css
 #13233E
   TH background
   JQ Header-Toolbar text & icon
+#222D42
+  Button default color
+  JQ Clickable: Default State
 #233452
   Between TH and TD when you need mid-header in TD. Example - News header background and Survey header background
 #344566
@@ -34,9 +37,6 @@ You can look at actual JQ link for theme in /design/css/jquery-ui.css
   JQ Hover state background
   JQ Active State background
   JQ Highlight Background
-#222D42
-  Button default color
-  JQ Clickable: Default State
 #dfeafd
   JQ Header/Toolbar background
 #E6EBFB
@@ -187,3 +187,17 @@ div .ui-dialog-content table {
 .unit_border_selected {
   border-color: #6B90D3;  /* Reserved for unit_preview border color */
 }
+
+/*
+table:not(.markup), div#tab_container {
+  border: solid 10px red;
+  /!*-o-border-image: url("images/border.png") 27 round stretch;*!/
+  border-image: url("images/border.png") 24 12 38 19 round stretch;
+  -o-border-image: url("images/border.png") 24 12 38 19 round stretch;
+  border-top: 24px;
+  border-right: 12px;
+  border-bottom: 38px;
+  border-left: 19px;
+  border-radius: 6px;
+}
+*/
