DESIGN-feat-40a16.12: Added border to supernova-ivash skin

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -276,7 +276,7 @@ planet = {
             <input type="hidden" name="action" />
             <div id="unit_cost_container"<!-- IF STACKABLE --> class="unit_create_stackable"<!-- ENDIF -->>
               <div id="unit_time_div" align="center">{STRING_BUILD_TIME}<span id="unit_time"></span></div>
-              <table style="font-size: {$FONT_SIZE};" id="unit_cost_table">
+              <table style="font-size: {$FONT_SIZE};" id="unit_cost_table" class="noborder">
                 <tr class="c_c">
                   <th width=45px>{L_sys_resources}</th>
                   <th width=65>{L_eco_price}</th>
