--- a/design/templates/OpenGame/market.tpl.html
+++ b/design/templates/OpenGame/market.tpl.html
@@ -3,6 +3,7 @@
 <h2>{L_eco_mrk_title}</h2>
 
 <div class="market_services">
+<div>
   <div>{L_eco_mrk_description}</div>
   <a href="market.php?mode={D_MARKET_RESOURCES}" class="button_pseudo">
     {L_eco_mrk_trader_do}<br/>
@@ -21,9 +22,8 @@
     {C_rpg_cost_info}&nbsp;{L_sys_dark_matter_sh}
   </a>
 </div>
+</div>
 
-<script type="text/javascript">
-</script>
 <!--
   <tr><th><a href="market.php?mode={D_MARKET_EXCHANGE}">{L_eco_mrk_exchange}</a></th><th>{C_rpg_cost_exchange}&nbsp;{L_sys_dark_matter_sh}</th></tr>
   <tr><th><a href="market.php?mode={D_MARKET_BANKER}">{L_eco_mrk_banker}</a></th><th>{C_rpg_cost_banker}&nbsp;{L_sys_dark_matter_sh}</th></tr>
