--- a/design/templates/OpenGame/novapedia.tpl.html
+++ b/design/templates/OpenGame/novapedia.tpl.html
@@ -39,6 +39,7 @@
   <!-- ENDIF -->
 </table>
 
+  <!-- IF UNIT_IS_COMBAT || (UNIT_IS_SHIP && .engine) -->
 <table width="519">
   <!-- IF UNIT_IS_SHIP && .engine -->
     <tr class="c_l">
@@ -191,3 +192,4 @@
     <!-- ENDIF -->
   <!-- ENDIF -->
 </table>
+  <!-- ENDIF -->
