--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -29,7 +29,7 @@
     </ul>
 
     <div id="tab_account">
-      <table width="100%">
+      <table width="100%" class="no_border_image">
         <!-- IF ADM_PROTECT_PLANETS -->
         <tr class="c_c">
           <th colspan="2">
@@ -205,7 +205,7 @@
     </div>
 
     <div id="tab_interface">
-      <table>
+      <table class="no_border_image">
         <tr>
           <th class="c_c" colspan="2">{L_opt_common}</th>
         </tr>
@@ -397,7 +397,7 @@
     <!-- ENDIF -->
 
     <div id="tab_alerts">
-      <table>
+      <table class="no_border_image">
         <!-- IF .options_1 -->
         <tr>
           <th class="c_c" colspan="<!-- IF SERVER_SEND_EMAIL -->3<!-- ELSE -->2<!-- ENDIF -->">{L_opt_alerts}</th>
