--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -188,16 +188,52 @@ div .ui-dialog-content table {
   border-color: #6B90D3;  /* Reserved for unit_preview border color */
 }
 
-/*
-table:not(.markup), div#tab_container {
+table:not(.markup):not(.noborder):not(.no_border_image), div#tab_container, div.market_services {
   border: solid 10px red;
-  /!*-o-border-image: url("images/border.png") 27 round stretch;*!/
-  border-image: url("images/border.png") 24 12 38 19 round stretch;
-  -o-border-image: url("images/border.png") 24 12 38 19 round stretch;
-  border-top: 24px;
-  border-right: 12px;
-  border-bottom: 38px;
-  border-left: 19px;
   border-radius: 6px;
+
+  -moz-border-image: url("images/border.png") 22 9 24 23 round round;
+  -o-border-image: url("images/border.png") 22 9 24 23 round round;
+  -webkit-border-image: url("images/border.png") 22 9 24 23 round round;
+  border-image: url("images/border.png") 22 9 24 23 round round;
+  border-top: 22px;
+  border-right: 9px;
+  border-bottom: 24px;
+  border-left: 23px;
+
+}
+
+div#tab_container {
+  background-color: transparent;
+  background-image: none;
+}
+
+div#tab_container > div {
+  background-color: #222D42;
+}
+
+div.market_services {
+  background-color: transparent;
+  padding: 0em;
+}
+
+.market_services div:first-child {
+  background-color: #222D42; /* #344566 */
+  padding: 0.5em;
+  margin-bottom: 0;
+}
+
+.ui-widget-header {
+  background-color: #222D42; /* #344566 */
+  border: none;
+  background-image: none;
+}
+
+.ui-tabs-active.ui-state-active {
+  background-color: #222D42; /* #344566 */
+}
+/*
+.ui-tabs .ui-tabs-nav li {
+  border-bottom-width: 1px;
 }
 */
