LOCALE-feat-40a17.0: Locale v3 phase 0

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -17,8 +17,10 @@
   var LA_menu_hide = "{LA_menu_hide}";
   var LA_menu_unpin = "{LA_menu_unpin}";
   var LA_menu_pin = "{LA_menu_pin}";
+  <!-- IF MENU_CUSTOMIZE -->
   var LA_menu_customize_show_items = "{LA_menu_customize_show_items}";
   var LA_menu_customize_hide_items = "{LA_menu_customize_hide_items}";
+  <!-- ENDIF -->
 
   var LEFT_MENU_SHOW_BUTTON_TOP = 7;
   var LEFT_MENU_SHOW_BUTTON_LEFT = 10;
